RESOLVED FIXED203918
ASSERTION FAILED: m_clientCounts.contains(contextId) in WebKit::VideoFullscreenManagerProxy::removeClientForContext(uint64_t)
https://bugs.webkit.org/show_bug.cgi?id=203918
Summary ASSERTION FAILED: m_clientCounts.contains(contextId) in WebKit::VideoFullscre...
Peng Liu
Reported 2019-11-06 14:10:06 PST
ASSERTION FAILED: m_clientCounts.contains(contextId) in WebKit::VideoFullscreenManagerProxy::removeClientForContext(uint64_t)
Attachments
Patch (1.91 KB, patch)
2019-11-06 14:43 PST, Peng Liu
no flags
Peng Liu
Comment 1 2019-11-06 14:11:32 PST
Peng Liu
Comment 2 2019-11-06 14:43:23 PST
WebKit Commit Bot
Comment 3 2019-11-07 06:55:20 PST
Comment on attachment 382962 [details] Patch Clearing flags on attachment: 382962 Committed r252183: <https://trac.webkit.org/changeset/252183>
WebKit Commit Bot
Comment 4 2019-11-07 06:55:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.