ASSERTION FAILED: m_clientCounts.contains(contextId) in WebKit::VideoFullscreenManagerProxy::removeClientForContext(uint64_t) https://bugs.webkit.org/show_bug.cgi?id=203918

Patch by Peng Liu <peng.liu6@apple.com> on 2019-11-07
Reviewed by Jer Noble.

Postpone the transition to exit fullscreen of a video element
before the previous transition of fullscreen mode change is completed.

Fix a flakey layout test (media/video-autoplay.html). No new test is needed.

* WebProcess/cocoa/VideoFullscreenManager.mm:
(WebKit::VideoFullscreenManager::exitVideoFullscreenForVideoElement):

Canonical link: https://commits.webkit.org/217287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252183 268f45cc-cd09-0410-ab3c-d52691b4dbfc